--- a/ppt/seminar.tex
+++ b/ppt/seminar.tex
@@ -42,12 +42,6 @@
 	\end{itemize}
 \end{frame}
 
-% \begin{frame}{Alternatives}
-% % solr
-% % sphinx
-% % no full text search
-% \end{frame}
-
 \section{Features}
 
 \begin{frame}{Document Oriented}
@@ -216,7 +210,7 @@
 
 \begin{frame}[allowframebreaks]{References}
 
-  \bibliography{seminar}
+  \bibliography{../common/seminar}
   \bibliographystyle{abbrv}
 
 \end{frame}
