--- a/abstract/abstract.tex
+++ b/abstract/abstract.tex
@@ -47,20 +47,7 @@ author = {https://www.elastic.co/products/elasticsearch}
 \nocite{*}
 
 \renewcommand{\abstractname}{\Large Abstract}
-\begin{abstract}
-Elastic search is a way to organize data and make it easily accessible. 
-It is a server  based search on Lucene. It is a highly scalable, distributed and full-text search engine. 
-Elastic search is developed in Java. It is published as open source under the terms of the Apache License. 
-Elasticsearch is the most popular enterprise search engine. Elasticsearch includes all advances in speed, security, 
-scalability, and hardware efficiency. Elastic search is a tool for querying written words. It can perform some other 
-smart tasks, but its principal is returning text similar to a given query and statistical analyses of a quantity of text. 
-Elasticsearch is a standalone database server,  which  is  written  in  Java and using HTTP/JSON protocol,it’s  takes  data  
-and  optimizes  the  data  according  to  language  based searches and stores it in a sophisticated format. 
-Elastic search is very convenient, supporting clustering and leader selection out of the box.  
-Whether  it’s  searching  a  database  of  trade  products  by  description,  finding  similar  text  in  a  body  of  
-crawled  web  pages. Elasticsearch is an excellent tool. 
-\end{abstract}
-
+\input{../common/abstract.tex}
 \bibliography{abstract}{}
 \bibliographystyle{plain}
 
