--- a/ppt/seminar.tex
+++ b/ppt/seminar.tex
@@ -58,6 +58,7 @@
 	\begin{itemize}
 		\item Distributed document store
 		\item Complete Lucene search engine
+		\item Primary and Replica shards
 		\item Hash functions for shard routing
 		\item Immutability by segments
 		\item Near real timing by In-memory Buffer
@@ -75,7 +76,7 @@
 \begin{frame}{Clustering}
 	\begin{itemize}
 		\item Node - instance of ES server
-		\item Primary and Replica shards
+		\item Cluster Health
 		\item Failure recovery
 		\item Horizontal scaling
 		\item Cluster master
@@ -174,7 +175,7 @@
 		\item Multi field search
 		\item Metafield all
 		\item Phrase search
-		\item Search as you type, n-grams
+		\item Search as you type, Edge n-grams
 		\item Fuzzy search
 	\end{itemize}
 \end{frame}
