--- a/report/helpers/acronyms.tex
+++ b/report/helpers/acronyms.tex
@@ -29,4 +29,10 @@
   long  = Hypertext Transfer Protocol ,
   class = abbrev
 }
+\DeclareAcronym{dsl}{
+  short = DSL ,
+  long  = Domain Specific Language ,
+  class = abbrev
+}
+
 
