--- a/report/helpers/acronyms.tex
+++ b/report/helpers/acronyms.tex
@@ -34,5 +34,10 @@
   long  = Domain Specific Language ,
   class = abbrev
 }
+\DeclareAcronym{php}{
+  short = PHP ,
+  long  = PHP Hypertext Protocol ,
+  class = abbrev
+}
 
 
